--- a/requirements.txt
+++ b/requirements.txt
@@ -9,10 +9,12 @@ Flask-Migrate==4.0.7
 Flask-SQLAlchemy==3.1.1
 Flask-WTF==1.2.1
 greenlet==3.0.3
+gunicorn==21.2.0
 itsdangerous==2.1.2
 Jinja2==3.1.3
 Mako==1.3.2
 MarkupSafe==2.1.5
+packaging==24.0
 python-dotenv==1.0.1
 SQLAlchemy==2.0.28
 typing_extensions==4.10.0
