--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ Flask-Login==0.6.3
 Flask-Migrate==4.0.7
 Flask-SQLAlchemy==3.1.1
 Flask-WTF==1.2.1
+gevent==24.2.1
 greenlet==3.0.3
 gunicorn==21.2.0
 itsdangerous==2.1.2
@@ -16,8 +17,11 @@ Mako==1.3.2
 MarkupSafe==2.1.5
 packaging==24.0
 python-dotenv==1.0.1
+setuptools==69.2.0
 SQLAlchemy==2.0.28
 typing_extensions==4.10.0
 visitor==0.1.3
 Werkzeug==3.0.1
 WTForms==3.1.2
+zope.event==5.0
+zope.interface==6.2
